0.2		UNRELEASED

 * Add --dry-run option to rebase command. 

 * Fix compatibility wit Bazaar 0.19.

 * Store parents correctly.

0.1 	2007-07-15

 * Initial release.
hi